@@ -3,6 +3,7 @@ since 1.4.2
 - Fix zoomed printouts (#115879)
 - Fix indentation setting in preferences (#116903)
 - Fix unit setting in preferences (#116901)
+- Move Comment Indicator setting from KSpread preferences to Sheet properties (#114693)
 
 since 1.4.1
 ===========
